# crusty_traits

./: Cargo.toml  Makefile.toml  README.md  cvec.rs  example.rs  justfile  mise.toml  output.rs
.github/workflows/: ci.yml
crates/crusty_trait_macro/: Cargo.toml  README.md
crates/crusty_trait_macro/src/: cdrop.rs  lib.rs  super_trait.rs  trait_for_cref.rs  utils.rs  vtable.rs
crates/crusty_trait_macro/src/vtable/: methods.rs
crates/crusty_traits_core/: Cargo.toml  README.md
crates/crusty_traits_core/src/: lib.rs  trait_wrapper.rs
crates/crusty_traits_types/: Cargo.toml  README.md
crates/crusty_traits_types/src/: cslice.rs  cvec.rs  lib.rs
macros/: Cargo.toml  README.md
macros/src/: crust_trait.rs  lib.rs
macros/src/crust_trait/: utils.rs
scripts/: Cargo.toml  build_c.rs  build_cbindgen.rs  scripts.just
src/: lib.rs  trait_wrapper.rs
testing_crates/shared_lib/: Cargo.toml
testing_crates/shared_lib/src/: lib.rs
tests/: basic_shared.rs  build-c.rs  cbindgen.toml  super_trait.rs
tests/c/include/: cbindgen.h
tests/c/lib/: lib.c  lib.h
tests/c/src/: basic_c.c  main.c
