[package]
name = "crusty_traits"
version = "0.1.0"
edition = "2024"

[dependencies]
crusty_traits_macros.workspace = true


[lints]
workspace = true

[workspace]
members = [
    "macros",
]

[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
crusty_traits_macros = { path = "macros" }

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
