[package]
name = "crusty_traits"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
crusty_traits_macros.workspace = true
crusty_traits_core.workspace = true
crusty_traits_types.workspace = true

[dev-dependencies]
libloading.workspace = true


[lints]
workspace = true

[workspace]
members = [
    "crates/crusty_trait_macro",
    "crates/crusty_traits_core",
    "crates/crusty_traits_types",
    "macros",
    "testing_crates/*",
]

[workspace.package]
authors = ["n1ght-hunter <samuelhuntnz@gmail.com>"]
license = "MPL-2.0"

[workspace.dependencies]

crusty_traits_macros = { path = "macros", version = "0.1.0" }
crusty_traits_core = { path = "crates/crusty_traits_core", version = "0.1.0" }
crusty_trait_macro = { path = "crates/crusty_trait_macro", version = "0.1.0" }
crusty_traits_types = { path = "crates/crusty_traits_types", version = "0.1.0" }
crusty_traits = { path = ".", version = "0.1.0" }
# cbindgen = "0.28.0"
# fork to allow use of expand in stable toolchain by passing RUSTCBOOTSTRAP=1 to cargo expand
cbindgen = { git = "https://github.com/n1ght-hunter/cbindgen.git", rev = "f40fe05" }


proc-macro2 = "1"
quote = "1"
syn = "2"

cc = "1.2"
libloading = "0.8"
prettyplease = "0.2.37"
serde = "1"      # Pin to older version compatible with the fork

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
