[package]
name = "crusty_traits_core"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Core types and traits for crusty_traits - FFI-safe trait objects"
documentation = "https://docs.rs/crusty_traits_core"
homepage.workspace = true
repository.workspace = true
keywords = ["ffi", "core", "c-abi", "repr-c", "traits"]

[dependencies]

[lints]
workspace = true
